--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -92,7 +92,7 @@
     "id": 9,
     "weaponId": "N/A",
     "name": "Berserk",
-    "description": "Gain attack speed based on HP lost (cap at %para2 HP).",
+    "description": "Gain attack speed based on HP lost (cap at %para2 HP). Gain a shield every 7 seconds.",
     "type": "Neutral",
     "level": 3,
     "para1": 0.01,
@@ -127,7 +127,7 @@
     "id": 12,
     "weaponId": "N/A",
     "name": "Drain",
-    "description": "Attacking heal for %para1 damage dealt.",
+    "description": "Attacking heal for %para1 damage dealt. Excess drain will become a shield (max: 50% HP)",
     "type": "Neutral",
     "level": 3,
     "para1": 0.25,
@@ -162,7 +162,7 @@
     "id": 15,
     "weaponId": "N/A",
     "name": "Ignite",
-    "description": "Attacking burns the enemies for %para2 attack damage over time.",
+    "description": "Attacking burns the enemies for %para2 attack damage over time. Burnt enemies have a chance to explode.",
     "type": "Neutral",
     "level": 3,
     "para1": 5,
@@ -203,7 +203,7 @@
     "id": 18,
     "weaponId": "N/A",
     "name": "Chilling Touch",
-    "description": "Attacking slows enemies by %para2 .",
+    "description": "Attacking slows enemies by %para2 . Slowed enemies have a chance to freeze and explode on death.",
     "type": "Neutral",
     "level": 3,
     "para1": 5,
@@ -242,7 +242,7 @@
     "id": 21,
     "weaponId": "N/A",
     "name": "Knockback",
-    "description": "Attacks greatly knockback enemies.",
+    "description": "Attacks greatly knockback enemies. Knocked enemies received more damage.",
     "type": "Neutral",
     "level": 3,
     "para1": 3,
@@ -279,7 +279,7 @@
     "id": 24,
     "weaponId": "N/A",
     "name": "Blazing Trail",
-    "description": "Upon dashing, leave a fiery trail that deals %para2 attack damage per second.",
+    "description": "Upon dashing, create a fiery trail that follows the player for <para4 seconds and deals %para2 attack damage per second.",
     "type": "Neutral",
     "level": 3,
     "para1": 5,
@@ -350,7 +350,7 @@
     "id": 30,
     "weaponId": "N/A",
     "name": "Dash Deflect",
-    "description": "Dashing deflects projectiles that deal %para1 their original damage.",
+    "description": "Dashing deflects projectiles that deal %para1 their original damage. After dashing, knock the enemies back and create a delecting shield.",
     "type": "Neutral",
     "level": 3,
     "para1": 3,
@@ -387,7 +387,7 @@
     "id": 33,
     "weaponId": "N/A",
     "name": "Dash Shockwave",
-    "description": "Dashing deals damage enemies in the way.",
+    "description": "Dashing deals damage and stuns enemies in the way.",
     "type": "Neutral",
     "level": 3,
     "para1": 2.5,
@@ -400,7 +400,7 @@
     "weaponId": "N/A",
     "name": "Conquest Smite",
     "icon": "smite",
-    "description": "Attacking inflicts Conquest stack that deal damage on detonation.",
+    "description": "Attacking inflicts Conquest stacks that deal damage on detonation.",
     "type": "Neutral",
     "level": 1,
     "para1": 2,
@@ -412,7 +412,7 @@
     "id": 35,
     "weaponId": "N/A",
     "name": "Conquest Smite",
-    "description": "Attacking inflicts Conquest stack that deal damage on detonation.",
+    "description": "Attacking inflicts Conquest stacks that deal damage on detonation.",
     "type": "Neutral",
     "level": 2,
     "para1": 2,
@@ -424,7 +424,7 @@
     "id": 36,
     "weaponId": "N/A",
     "name": "Conquest Smite",
-    "description": "Attacking inflicts Conquest stack that deal damage on detonation.",
+    "description": "Attacking inflicts Conquest stacks that deal damage on detonation and inflict fear on death.",
     "type": "Neutral",
     "level": 3,
     "para1": 2,
@@ -461,7 +461,7 @@
     "id": 39,
     "weaponId": "N/A",
     "name": "Multistrike",
-    "description": "Fire <para1 more times each attack.",
+    "description": "Fire <para1 more times each attack. Last strike has %para4 critical chance. ",
     "type": "Neutral",
     "level": 3,
     "para1": 3,
@@ -498,12 +498,12 @@
     "id": 42,
     "weaponId": "N/A",
     "name": "Ricochet",
-    "description": "Projectiles bounce to <para1 more enemies.",
+    "description": "Projectiles bounce to <para1 more enemies. Last ricochet has a chance to shoot <para4 projectiles.",
     "type": "Ranged",
     "level": 3,
     "para1": 5,
     "para2": 0.55,
-    "para3": 0.3,
+    "para3": 0.1,
     "para4": 3
   },
   {
@@ -535,7 +535,7 @@
     "id": 45,
     "weaponId": "N/A",
     "name": "Piercing",
-    "description": "Projectiles pierce through all enemies.",
+    "description": "Projectiles pierce through all enemies and bounce off walls.",
     "type": "Ranged",
     "level": 3,
     "para1": 0,
@@ -579,7 +579,7 @@
     "id": 48,
     "weaponId": "N/A",
     "name": "Chain Lightning",
-    "description": "Hitting the enemy releases lightning that deals damage to <para1 enemies with a chance to stun.",
+    "description": "Hitting the enemy releases lightning that deals damage to <para1 enemies with a chance to stun. Enemies has a chance to release lightning balls on death.",
     "type": "Ranged",
     "level": 3,
     "para1": 10,
