--- a/projectile.json
+++ b/projectile.json
@@ -30,16 +30,16 @@
   },
   {
     "id": 3,
-    "name": "Super Fast Projectile",
+    "name": "Demon Boar Projectile",
     "type": "Straight",
     "model": "Weapon/FireArrow",
     "livetime": 30,
     "ignorewhencollidewithhero": true,
     "ignoredamagetohero": false,
     "ignoreobstacle": true,
-    "speedbullet": 30,
-    "modelSize": 1.5,
-    "collisionSize": 1.5
+    "speedbullet": 7.5,
+    "modelSize": 12,
+    "collisionSize": 12
   },
   {
     "id": 4,
