--- a/projectile.json
+++ b/projectile.json
@@ -32,7 +32,7 @@
     "id": 3,
     "name": "Demon Boar Projectile",
     "type": "Straight",
-    "model": "Weapon/FireArrow",
+    "model": "Weapon/FireOrbSharpRed",
     "livetime": 30,
     "ignorewhencollidewithhero": true,
     "ignoredamagetohero": false,
