--- a/projectile.json
+++ b/projectile.json
@@ -143,7 +143,7 @@
     "id": 14,
     "name": "Shotgun Skull Projectile",
     "type": "SphereSkill",
-    "model": "Weapon/FireArrow",
+    "model": "Weapon/IceArrow",
     "livetime": 1,
     "ignorewhencollidewithhero": false,
     "ignoredamagetohero": false,
